zolved z-index issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,6 +65,7 @@ a {
 }
 
 #ketpl_autocomplete-popup {
+  z-index: 999999;
   display: block;
   position: absolute;
   top: 48px;
